# memory-framework

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: lme_best_full500_20260525.yaml  lme_gpt41_best415_20260529.yaml  rag_baseline_longmemeval.yaml  server_simplemem.env.example  server_simplemem.yaml
memory_baseline/: __init__.py  judge_longmemeval.py  merge_locomo_metrics.py  merge_longmemeval_metrics.py  run_locomo.py  run_longmemeval.py  sweep_rag.py
memory_baseline/cli/: judge_longmemeval.py  merge_locomo_metrics.py  merge_longmemeval_metrics.py  probe_longmemeval_run.py  run_locomo.py  run_longmemeval.py  sweep_rag.py
memory_baseline/core/: __init__.py  env.py  io.py  llm_cache.py  schemas.py  token_accounting.py  utils.py
memory_baseline/data/: __init__.py  locomo.py  longmemeval.py
memory_baseline/evaluation/: __init__.py  error_analysis.py  prompt_calibration_replay.py  qa.py  reranker_ablation.py  retrieval.py
memory_baseline/generation/: answerer.py  evidence_compiler.py  judge.py  provence_pruner.py
memory_baseline/indexing/: __init__.py  embedder.py  vector_store.py
memory_baseline/retrieval/: __init__.py  dense.py  formatter.py  ranking.py  typed_facts.py
tests/: test_env.py  test_rag_baseline.py
tests/fixtures/: longmemeval_s_tiny.json
